--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "registry": "https://npm.pkg.github.com/RahulMj21"
     },
-    "version": "1.0.4",
+    "version": "1.0.5",
     "description": "",
     "scripts": {
         "rollup": "rollup -c",
@@ -26,6 +26,7 @@
         "@rollup/plugin-commonjs": "^23.0.2",
         "@rollup/plugin-node-resolve": "^15.0.1",
         "@rollup/plugin-typescript": "^9.0.2",
+        "@storybook/addon-a11y": "^6.5.13",
         "@storybook/addon-actions": "^6.5.13",
         "@storybook/addon-essentials": "^6.5.13",
         "@storybook/addon-interactions": "^6.5.13",
@@ -60,11 +61,7 @@
     },
     "peerDependencies": {
         "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "@chakra-ui/react": "^2.4.1",
-        "@emotion/react": "^11.10.5",
-        "@emotion/styled": "^11.10.5",
-        "framer-motion": "^7.6.10"
+        "react-dom": "^18.2.0"
     },
     "main": "dist/cjs/index.js",
     "module": "dist/esm/index.js",
