--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "registry": "https://npm.pkg.github.com/RahulMj21"
     },
-    "version": "1.0.5",
+    "version": "1.0.8",
     "description": "",
     "scripts": {
         "rollup": "rollup -c",
@@ -19,8 +19,8 @@
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-react": "^7.18.6",
         "@babel/preset-typescript": "^7.18.6",
-        "@chakra-ui/react": "^2.4.1",
         "@chakra-ui/storybook-addon": "^4.0.13",
+        "@chakra-ui/react": "^2.4.1",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
         "@rollup/plugin-commonjs": "^23.0.2",
@@ -61,7 +61,11 @@
     },
     "peerDependencies": {
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "@chakra-ui/react": "^2.4.1",
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
+        "framer-motion": "^7.6.10"
     },
     "main": "dist/cjs/index.js",
     "module": "dist/esm/index.js",
